# aoc2022

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
cmake/: BuildHelpers.cmake
day1/: CMakeLists.txt  part1.cc  part2.cc
day10/: CMakeLists.txt  part1.cc  part2.cc
day11/: CMakeLists.txt  part1.cc  part2.cc
day12/: CMakeLists.txt  part1.cc  part2.cc
day13/: CMakeLists.txt  part1.cc  part2.cc
day14/: CMakeLists.txt  part1.cc  part2.cc
day15/: CMakeLists.txt  part1.cc  part1Fail.cc  part2.cc
day16/: CMakeLists.txt  part1.cc  part1Fail.cc  part2.cc
day17/: CMakeLists.txt  part1.cc  part2.cc
day18/: CMakeLists.txt  part1.cc
day19/: CMakeLists.txt  common.h  part1.cc  part1Faster.cc  part1Long.cc  part1test.cc  part2.cc  testmain.cc
day2/: CMakeLists.txt  part1.cc  part2.cc
day20/: CMakeLists.txt  example2.txt  part1.cc  part2.cc
day21/: CMakeLists.txt  part1.cc  part2.cc
day22/: CMakeLists.txt  \  part1.cc  part2.cc
day23/: CMakeLists.txt  part1.cc  part2.cc
day24/: CMakeLists.txt  in.txt  part1.cc  part2.cc
day25/: CMakeLists.txt  part1.cc  part2.cc
day3/: CMakeLists.txt  part1.cc  part2.cc  sample2.txt
day4/: CMakeLists.txt  part1.cc  part2.cc
day5/: CMakeLists.txt  part1.cc  part2.cc
day6/: CMakeLists.txt  part1.cc  part2.cc
day7/: CMakeLists.txt  part1.cc  part1fail.cc  part2.cc
day8/: CMakeLists.txt  part1.cc  part2.cc
day9/: CMakeLists.txt  part1.cc  part2.cc
